@@ -1,3 +1,6 @@
+2009-10-18  6.5.7-0 Cristy  <quetzlzacatenango@image...>
+  * Interpret gravity properly for ExtentImage().
+
 2009-10-08  6.5.6-10 <kmx@volny...>
   * Improve PerlMagick.PL to work with Strawberry Perl under Windows.
 
